feat: add check-token endpoint
